<resources>
    <string name="app_name">Pittsburgh Trivia Game</string>
    <string name="action_settings">Settings</string>

    <string name="tempNote">NOTE: Use admin for username and password to sign in. Create account does not fully work yet.</string>

    <!--CreateAccount-->
    <string name="createAccountScreenUsername">Username:</string>
    <string name="createAccountScreenCreatePassword">Create Password:</string>
    <string name="createAccountScreenConfirmPassword">Confirm Password:</string>
    <string name="createAccountScreenUsernameCharLength">Between 6 to 24 characters</string>
    <string name="createAccountScreenPasswordCharLength">Between 8 to 64 characters</string>
    <string name="createAccountScreenUsernameValidChars">Valid Characters: Letters, Numbers and _</string>
    <string name="createAccountScreenCreateAccountButton">Create Account</string>
    <string name="createAccountScreenCancelButton">Cancel</string>

    <!--LeaderBoard-->
    <string name="leaderBoardScreenYourScore">Your Points:</string>
    <string name="leaderBoardScreenYourPoints">0</string>
    <string name="leaderBoardScreenUsername">CHAMPIONS</string>
    <string name="leaderBoardScreenPoints">POINTS</string>
    <string name="leaderBoardScreenUser1">Username1</string>
    <string name="leaderBoardScreenUser2">Username2</string>
    <string name="leaderBoardScreenUser3">Username3</string>
    <string name="leaderBoardScreenUser4">Username4</string>
    <string name="leaderBoardScreenUser5">Username5</string>
    <string name="leaderBoardScreenScore1">5</string>
    <string name="leaderBoardScreenScore2">4</string>
    <string name="leaderBoardScreenScore3">3</string>
    <string name="leaderBoardScreenScore4">2</string>
    <string name="leaderBoardScreenScore5">1</string>
    <string name="leaderBoardScreenOkayButton">OKAY</string>

    <!--Quiz-->
    <string name="quizScreenTime">TIME</string>
    <string name="quizScreenTimeLeft">0</string>
    <string name="quizScreenQuestion">Question</string>
    <string name="quizScreenAnswerButton1">Answer 1</string>
    <string name="quizScreenAnswerButton2">Answer 2</string>
    <string name="quizScreenAnswerButton3">Answer 3</string>
    <string name="quizScreenAnswerButton4">Answer 4</string>
    <string name="quizScreenSubmitButton">SUBMIT</string>

    <!--Result-->
    <string name="resultScreenPoints">Points</string>
    <string name="resultScreenScore">0</string>
    <string name="resultScreenOkayButton">OKAY</string>
    <string name="resultScreenReviewButton">REVIEW</string>

    <!--Review-->
    <string name="reviewScreenQuestion">Correct Answer</string>
    <string name="reviewScreenCorrectAnswer">Correct Answer</string>
    <string name="reviewScreenYourAnswer">Your Answer</string>
    <string name="reviewScreenPrevButton">PREV</string>
    <string name="reviewScreenNextButton">NEXT</string>
    <string name="reviewScreenOkayButton">OKAY</string>

    <!--Settings-->
    <string name="settingsScreenNotificationSwitch">Daily Reminder Notifications</string>
    <string name="settingsScreenOkayButton">OKAY</string>

    <!--SignIn-->
    <string name="signInScreenUsername">Username:</string>
    <string name="signInScreenPassword">Password:</string>
    <string name="signInScreenSignInButton">Sign In</string>
    <string name="signInScreenCreateAccountButton">Create Account</string>

    <!--Trivia Game-->
    <string name="TriviaGameUsername">username</string>
    <string name="TriviaGamePlayButton">PLAY</string>
    <string name="TriviaGameLeaderBoardButton">LEADERBOARD</string>
    <string name="TriviaGameSettingsButton">SETTINGS</string>
    <string name="TriviaGameQuitButton">QUIT</string>
</resources>
