<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding = "16dp"
    tools:context=".QuizScreen"
    android:background="#ffffa0"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/quizScreenTime"
        android:textSize="32sp"
        android:id="@+id/timeView"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/quizScreenTimeLeft"
        android:textSize="40sp"
        android:id="@+id/quizScreenTimeLeftTextView"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/quizScreenQuestion"
        android:textSize="24sp"
        android:id="@+id/quizScreenQuestionTextView"
        android:layout_gravity="start" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/quizScreenAnswerButtonGroup" >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quizScreenAnswerButton1"
            android:textSize="32sp"
            android:id="@+id/quizScreenAnswerButton1"
            android:layout_gravity="start"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quizScreenAnswerButton2"
            android:textSize="32sp"
            android:id="@+id/quizScreenAnswerButton2"
            android:layout_gravity="start" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quizScreenAnswerButton3"
            android:textSize="32sp"
            android:id="@+id/quizScreenAnswerButton3"
            android:layout_gravity="start" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quizScreenAnswerButton4"
            android:textSize="32sp"
            android:id="@+id/quizScreenAnswerButton4"
            android:layout_gravity="start" />
    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:text="@string/quizScreenSubmitButton"
        android:textSize="32sp"
        android:id="@+id/quizScreenSubmitButton"
        android:layout_gravity="center_horizontal"
        android:onClick="onClickSubmitButton" />
</LinearLayout>
