<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding = "16dp"
    tools:context=".ResultScreen"
    android:background="#ffffa0"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/resultScreenPoints"
        android:textSize="40sp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/resultScreenScore"
        android:textSize="40sp"
        android:id="@+id/resultScreenPointsTextView"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:text="@string/resultScreenOkayButton"
        android:textSize="32sp"
        android:id="@+id/resultScreenOkayButton"
        android:layout_gravity="center_horizontal"
        android:onClick="onClickOkayButton" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:text="@string/resultScreenReviewButton"
        android:textSize="32sp"
        android:id="@+id/resultScreenReviewButton"
        android:layout_gravity="center_horizontal"
        android:onClick="onClickReviewButton" />
</LinearLayout>