<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding = "16dp"
    tools:context=".SignInScreen"
    android:background="#ffffa0"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/signInScreenUsername"
            android:textSize="20sp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/signInScreenUsernameTextField"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/signInScreenPassword"
            android:textSize="20sp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/signInScreenPasswordTextField"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/signInScreenSignInButton"
        android:textSize="32sp"
        android:id="@+id/signInScreenSignInButton"
        android:onClick="onClickSignInButton"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/signInScreenCreateAccountButton"
        android:textSize="28sp"
        android:id="@+id/signInScreenCreateAccountButton"
        android:onClick="onClickCreateAccountButton"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tempNote"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>
</LinearLayout>